src/perl6_curl.h

int perl6_curlinfo_text ();
int perl6_curlinfo_header_in ();
int perl6_curlinfo_header_out ();
int perl6_curlinfo_data_in ();
int perl6_curlinfo_data_out ();
int perl6_curlinfo_ssl_data_in ();
int perl6_curlinfo_ssl_data_out ();
int perl6_curlinfo_end ();
int perl6_curle_ok ();
int perl6_curle_unsupported_protocol ();
int perl6_curle_failed_init ();
int perl6_curle_url_malformat ();
int perl6_curle_not_built_in ();
int perl6_curle_couldnt_resolve_proxy ();
int perl6_curle_couldnt_resolve_host ();
int perl6_curle_couldnt_connect ();
int perl6_curle_ftp_weird_server_reply ();
int perl6_curle_remote_access_denied ();
int perl6_curle_ftp_accept_failed ();
int perl6_curle_ftp_weird_pass_reply ();
int perl6_curle_ftp_accept_timeout ();
int perl6_curle_ftp_weird_pasv_reply ();
int perl6_curle_ftp_weird_227_format ();
int perl6_curle_ftp_cant_get_host ();
int perl6_curle_obsolete16 ();
int perl6_curle_ftp_couldnt_set_type ();
int perl6_curle_partial_file ();
int perl6_curle_ftp_couldnt_retr_file ();
int perl6_curle_obsolete20 ();
int perl6_curle_quote_error ();
int perl6_curle_http_returned_error ();
int perl6_curle_write_error ();
int perl6_curle_obsolete24 ();
int perl6_curle_upload_failed ();
int perl6_curle_read_error ();
int perl6_curle_out_of_memory ();
int perl6_curle_operation_timedout ();
int perl6_curle_obsolete29 ();
int perl6_curle_ftp_port_failed ();
int perl6_curle_ftp_couldnt_use_rest ();
int perl6_curle_obsolete32 ();
int perl6_curle_range_error ();
int perl6_curle_http_post_error ();
int perl6_curle_ssl_connect_error ();
int perl6_curle_bad_download_resume ();
int perl6_curle_file_couldnt_read_file ();
int perl6_curle_ldap_cannot_bind ();
int perl6_curle_ldap_search_failed ();
int perl6_curle_obsolete40 ();
int perl6_curle_function_not_found ();
int perl6_curle_aborted_by_callback ();
int perl6_curle_bad_function_argument ();
int perl6_curle_obsolete44 ();
int perl6_curle_interface_failed ();
int perl6_curle_obsolete46 ();
int perl6_curle_too_many_redirects ();
int perl6_curle_unknown_option ();
int perl6_curle_telnet_option_syntax ();
int perl6_curle_obsolete50 ();
int perl6_curle_peer_failed_verification ();
int perl6_curle_got_nothing ();
int perl6_curle_ssl_engine_notfound ();
int perl6_curle_ssl_engine_setfailed ();
int perl6_curle_send_error ();
int perl6_curle_recv_error ();
int perl6_curle_obsolete57 ();
int perl6_curle_ssl_certproblem ();
int perl6_curle_ssl_cipher ();
int perl6_curle_ssl_cacert ();
int perl6_curle_bad_content_encoding ();
int perl6_curle_ldap_invalid_url ();
int perl6_curle_filesize_exceeded ();
int perl6_curle_use_ssl_failed ();
int perl6_curle_send_fail_rewind ();
int perl6_curle_ssl_engine_initfailed ();
int perl6_curle_login_denied ();
int perl6_curle_tftp_notfound ();
int perl6_curle_tftp_perm ();
int perl6_curle_remote_disk_full ();
int perl6_curle_tftp_illegal ();
int perl6_curle_tftp_unknownid ();
int perl6_curle_remote_file_exists ();
int perl6_curle_tftp_nosuchuser ();